src/test/ui/span/regions-close-over-type-parameter-2.stderr
error[E0597]: `tmp0` does not live long enough
  --> $DIR/regions-close-over-type-parameter-2.rs:33:21
   |
LL |         let tmp1 = &tmp0;
   |                     ^^^^ borrowed value does not live long enough
LL |         repeater3(tmp1)
LL |     };
   |     -- borrowed value needs to live until here
   |     |
   |     `tmp0` dropped here while still borrowed

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0597"
